--- a/ajapaik-ui/src/main/webapp/search.css
+++ b/ajapaik-ui/src/main/webapp/search.css
@@ -37,7 +37,7 @@
 }
 #search-results ul.items
 {
-    margin: 75px 30px 0 10px;
+    margin: 80px 30px 0 10px;
     /* padding: 80px; */
     display: table;
     
@@ -97,7 +97,7 @@
 }
 #search-form input[type="text"]
 {
-    width: 300px;
+    /* width: 300px; */
     height: 16px;
     padding: 3px 6px;
     font-size: 12px;
@@ -223,7 +223,7 @@ a.btn:active
 #actions
 {
     clear: both;
-    height: 20px;
+    height: 23px;
     /* width: 90%; */
     margin: 0 auto;
     padding: 5px 0 5px 0;
