--- a/ajapaik-ui/src/main/webapp/search.css
+++ b/ajapaik-ui/src/main/webapp/search.css
@@ -237,3 +237,23 @@ a.btn:active
     float: left;
     padding: 10px 0;
 }
+
+
+
+/*** TOOLTIP ***/
+
+
+#tooltip
+{
+    background: #FFF;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 20px #ccc;
+}
+
+#tooltip .tooltip-desc
+{
+    padding: 10px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+    font-size: 12px;
+    line-height: 18px;
+}
