--- a/ajapaik-ui/src/main/webapp/search.css
+++ b/ajapaik-ui/src/main/webapp/search.css
@@ -25,7 +25,7 @@
 
 #search-results
 {
-	display: none;
+/*	display: none;*/
     border: 1px solid #ccc;
     border-top: none;
     /* 
@@ -251,8 +251,11 @@ a.btn:active
 #tooltip
 {
     background: #FFF;
-    border: 1px solid #ccc;
-    box-shadow: 0px 0px 20px #ccc;
+    border: 5px solid #ccc;
+    box-shadow: 0px 0px 20px #555;
+    
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
 }
 
 #tooltip .tooltip-desc
@@ -261,4 +264,24 @@ a.btn:active
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
     font-size: 12px;
     line-height: 18px;
+}
+
+#tooltip .tooltip-img
+{
+    position: relative;
+}
+#tooltip .spinner
+{
+    position: relative;
+    background: #fff;
+    
+}
+#tooltip .spinner>img
+{
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    margin: -16px 0 0 -16px;
+    left: 50%;
+    top: 50%;  
 }
