--- a/ajapaik-ui/src/main/webapp/test.css
+++ b/ajapaik-ui/src/main/webapp/test.css
@@ -27,7 +27,7 @@
 
 #result-view {
 	background: #F1F1F1;
-	padding: 230px 10px 10px;
+	padding: 270px 10px 10px;
 }
 
 #set-view {
@@ -95,4 +95,61 @@
 
 .record-container img {
 	border: 1px solid;
+}
+
+
+/*** TOOLTIP ***/
+
+
+#tooltip
+{
+    background: #FFF;
+    border: 5px solid #ccc;
+    box-shadow: 0px 0px 20px #555;
+    
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+}
+
+#tooltip .tooltip-desc
+{
+    padding: 10px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+    font-size: 12px;
+    line-height: 18px;
+}
+
+#tooltip .tooltip-title
+{
+    padding-left: 10px;
+    font-size: 12px;
+    font-weight: bold;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+}
+
+#tooltip .tooltip-number
+{
+    padding-left: 10px;
+    font-size: 12px;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif !important;
+}
+
+#tooltip .tooltip-img
+{
+    position: relative;
+}
+#tooltip .spinner
+{
+    position: relative;
+    background: #fff;
+    
+}
+#tooltip .spinner>img
+{
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    margin: -16px 0 0 -16px;
+    left: 50%;
+    top: 50%;  
 }
