--- a/ajapaik-ui/src/main/webapp/ajapaik.css
+++ b/ajapaik-ui/src/main/webapp/ajapaik.css
@@ -5,15 +5,12 @@
   src: url('fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('fonts/glyphicons-halflings-regular.woff') format('woff'), url('fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 
-body {
-	margin-top: 10px;
-}
-
 .header {
 	position: fixed;
 	background: #FFFFFF;
 	width: 100%;
 	z-index: 1;
+	padding-top: 10px;
 }
 
 #panel {
@@ -41,11 +38,11 @@ body {
 }
 
 #result-view {
-	padding: 325px 10px 10px;
+	padding: 335px 10px 10px;
 }
 
 #set-view, #task-view {
-	padding: 140px 10px 10px;
+	padding: 150px 10px 10px;
 }
 
 #result-view:before, #result-view:after,#set-view:before, #set-view:after,#task-view:before, #task-view:after {
